[MVP2-76] - universal share with popover design v2 - fix some z-index problem on bet event page

--- a/src/components/Popup/styles.module.scss
+++ b/src/components/Popup/styles.module.scss
@@ -28,11 +28,6 @@
     background-color: $colorWhite;
     overflow-y: scroll;
 
-    &.sharePopupContainer {
-      width: auto;
-      height: auto;
-    }
-
     @media (max-width: $screen-sm) {
       &.signUpPopupContainer {
         border-radius: 30px 30px 0 0;
