--- a/src/screens/Bet/styles.module.scss
+++ b/src/screens/Bet/styles.module.scss
@@ -59,7 +59,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    z-index: 1;
+    z-index: 2;
 
     > div {
       &:first-child {
